<resources>
    <string name="app_name">ColorfulDays</string>
    <string name="title_today">Today</string>
    <string name="title_stats">Stats</string>
    <string name="title_colors">Colors</string>
    <string name="title_add_task">Add Task</string>
    <string name="title_task_setting">Task Setting</string>
    <string name="add_task_success">New task was added successfully.</string>
    <string name="add_task_failure">New task failed to be added.</string>
    <string name="task_name_tv_hint">Task Name:</string>
    <string name="task_name_tv_eg">Eg: Workout</string>
    <string name="task_hour_tv_hint">Initial Time:</string>
    <string name="task_goal_tv_hint">Goal:</string>
    <string name="existing_task_hour_tv_hint">Hours Spent</string>
    <string name="task_hour_tv_eg">Eg: 100</string>
    <string name="task_goal_tv_eg">Eg: 10</string>
    <string name="empty_task_name_msg">Task name is required.</string>
    <string name="delete_button_txt">Delete Task</string>
    <string name="task_note_hint">Leave some notes for your time</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_task_detail">TaskDetailActivity</string>
    <string name="daily_task_history_activity">DailyTaskHistoryActivity</string>
    <string-array name="goal_frequency">
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
    </string-array>
</resources>
