<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_material_light"
    tools:context="com.zhengxunw.colorfuldays.commons.TaskSettingActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@android:color/transparent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/task_name_tv_hint"
            android:gravity="center_vertical"
            android:textAlignment="center"
            android:layout_weight="1"/>

        <EditText
            android:id="@+id/edit_task_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:hint="@string/task_name_tv_eg"
            android:layout_weight="3"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/task_hour_tv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/task_hour_tv_hint"
            android:gravity="center_vertical"
            android:textAlignment="center"
            android:layout_weight="1"/>

        <EditText
            android:id="@+id/edit_task_init_hour"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/task_hour_tv_eg"
            android:layout_weight="3"
            android:inputType="numberDecimal"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_color_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Color Setting" />

    <RelativeLayout
        android:id="@+id/graphs_and_delete_btn"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            layout="@layout/stats_graphs_with_tabs"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_above="@+id/btn_delete_task"/>

        <Button
            android:layout_alignParentBottom="true"
            android:id="@+id/btn_delete_task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FF0000"
            android:text="@string/delete_button_txt" />
    </RelativeLayout>

</LinearLayout>